--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,6 +1,10 @@
+html {
+  font-family: 'Roboto', sans-serif;
+}
+
 .header-container {
   width: 100%;
-  height: 750px;
+  height: 800px;
   border-left: none;
   border-right: none;
   position: relative;
@@ -19,7 +23,7 @@
 video {
   position: absolute;
   z-index: -1;
-  opacity: 0.78;
+  opacity: 1;
   width: 100%;
 }
 
@@ -33,4 +37,9 @@ video {
   letter-spacing: 3px;
   font-size: 50px;
   font-family: Helvetica;
+}
+
+.grid-list {
+  width: 100%
+  height: 900px;
 }
