--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,10 +1,6 @@
-html {
-  font-family: 'Roboto', sans-serif;
-}
-
 .header-container {
   width: 100%;
-  height: 800px;
+  height: 675px;
   border-left: none;
   border-right: none;
   position: relative;
@@ -28,7 +24,7 @@ video {
   position: absolute;
   z-index: -1;
   opacity: 1;
-  width: 100%;
+  width: 97%;
 }
 
 .jumbotron-heading {
@@ -46,4 +42,8 @@ video {
 .grid-list {
   width: 100%
   height: 900px;
+}
+
+.grid-tile {
+  cursor: pointer;
 }
