--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,10 +1,6 @@
-html {
-  font-family: 'Roboto', sans-serif;
-}
-
 .header-container {
   width: 100%;
-  height: 800px;
+  height: 750px;
   border-left: none;
   border-right: none;
   position: relative;
@@ -23,7 +19,7 @@ html {
 video {
   position: absolute;
   z-index: -1;
-  opacity: 1;
+  opacity: 0.78;
   width: 100%;
 }
 
@@ -42,4 +38,8 @@ video {
 .grid-list {
   width: 100%
   height: 900px;
+}
+
+.grid-tile {
+  cursor: pointer;
 }
