--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,42 +1,20 @@
-.header-container {
-  width: 100%;
-  height: 675px;
-  border-left: none;
-  border-right: none;
-  position: relative;
-  padding: 20px;
-}
-
 .nav-bar {
   cursor: 'pointer';
+  background-color: transparent !important;
+}
+
+.nav-button {
+  color: white !important;
 }
 
 .video-container {
-  /*position: absolute;*/
-  top: 0%;
-  left: 0%;
-  height: 100%;
+  height: 725px;
   width: 100%;
   overflow: hidden;
 }
 
 video {
-  position: absolute;
-  z-index: -1;
-  opacity: 1;
-  width: 97%;
-}
-
-.jumbotron-heading {
-  color: #000000;
-  z-index: 1;
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 750px;
-  letter-spacing: 3px;
-  font-size: 50px;
-  font-family: Helvetica;
+  width: 100%;
 }
 
 .grid-list {
@@ -46,8 +24,4 @@ video {
 
 .grid-tile {
   cursor: pointer;
-}
-
-.nav-button {
-  color: white !important;
 }
