[refactor] moves login and signup buttons to inline-block

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -48,6 +48,11 @@ video {
   cursor: pointer;
 }
 
+.nav-right {
+  display:inline-block;
+}
+
 .nav-button {
   color: white !important;
+  display:inline-block;
 }
