--- a/client/style/style.css
+++ b/client/style/style.css
@@ -9,16 +9,42 @@
   z-index: 1;
 }
 
-.video-container {
-  height: 650px;
+.header-container {
   width: 100%;
-  overflow: hidden;
+  height: 800px;
+  border-left: none;
+  border-right: none;
+  position: relative;
+  padding: 20px;
   margin-top: -80px;
 }
 
-video {
+.video-container {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  height: 100%;
   width: 100%;
+  overflow: hidden;
+}
+
+video {
+  position: absolute;
   z-index: -1;
+  opacity: 0.78;
+  width: 100%;
+}
+
+.jumbotron-heading {
+  color: white;
+  z-index: 1;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 350px;
+  letter-spacing: 3px;
+  font-size: 50px;
+  font-weight: bold;
 }
 
 .grid-list {
