--- a/client/style/style.css
+++ b/client/style/style.css
@@ -55,8 +55,12 @@ video {
 
 .grid-tile {
   cursor: pointer;
+  opacity: 0.68;
 }
 
+.grid-title, div {
+  font-size: 30px !important,
+}
 .nav-right {
   display:inline-block;
   margin: 0px;
@@ -66,4 +70,16 @@ video {
   color: white !important;
   display:inline-block;
   z-index: 1;
+}
+
+.space-heading {
+  color: grey67;
+  z-index: 1;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 200px;
+  letter-spacing: 3px;
+  font-size: 35px;
+  font-weight: bold;
 }
