--- a/client/style/style.css
+++ b/client/style/style.css
@@ -93,3 +93,22 @@ video {
 .fa {
   color: rgb(97,155,101);
 }
+
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
